--- a/hs-game.cabal
+++ b/hs-game.cabal
@@ -15,6 +15,7 @@ executable game
                      , sdl2-image
                      , monad-loops
                      , text
+                     , array
   default-language:    Haskell2010
   default-extensions:  OverloadedStrings
 
