Work on Drawable

--- a/hs-game.cabal
+++ b/hs-game.cabal
@@ -14,6 +14,8 @@ executable game
                        World
                        GameState
                        Input
+                       Drawable
+                       Camera
   build-depends:       base
                      , sdl2
                      , sdl2-image
