--- a/hs-game.cabal
+++ b/hs-game.cabal
@@ -14,10 +14,12 @@ executable game
                        World
                        GameState
                        Input
+                       Intent
                        Drawable
                        Camera
                        Actor
                        Character
+                       Rendering
   build-depends:       base
                      , sdl2
                      , sdl2-image
