--- a/hs-game.cabal
+++ b/hs-game.cabal
@@ -25,8 +25,11 @@ executable game
   build-depends:       base
                      , sdl2
                      , sdl2-image
+                     , sdl2-mixer
+                     , template-haskell
                      , monad-loops
                      , text
+                     , vector
                      , array
                      , lens
                      , containers
