--- a/hs-game.cabal
+++ b/hs-game.cabal
@@ -36,6 +36,7 @@ executable game
                      , vector
                      , array
                      , lens
+                     , HTTP
                      , linear
                      , containers
                      , clock
