--- a/hs-game.cabal
+++ b/hs-game.cabal
@@ -38,6 +38,7 @@ executable game
                      , lens
                      , HTTP
                      , linear
+                     , random
                      , containers
                      , clock
                      , formatting
