--- a/hs-game.cabal
+++ b/hs-game.cabal
@@ -25,6 +25,7 @@ executable game
                        Counter
                        Bot
                        SpriteSheet
+                       Config
   build-depends:       base
                      , sdl2
                      , sdl2-image
@@ -35,13 +36,14 @@ executable game
                      , text
                      , vector
                      , array
-                     , lens
                      , HTTP
+                     , yaml
                      , linear
                      , random
                      , containers
                      , clock
                      , formatting
+                     , network-uri
   default-language:    Haskell2010
   default-extensions:  OverloadedStrings
 
